umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_sulflower.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: D8h
order: 32
equivalence_sets:
  - - C(0)
    - C(1)
    - C(2)
    - C(3)
    - C(4)
    - C(5)
    - C(6)
    - C(7)
  - - C(8)
    - C(9)
    - C(10)
    - C(11)
    - C(12)
    - C(13)
    - C(14)
    - C(15)
  - - S(16)
    - S(17)
    - S(18)
    - S(19)
    - S(20)
    - S(21)
    - S(22)
    - S(23)
