umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_sulfur_s.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: Cs
order: 2
equivalence_sets:
  - - S(0)
  - - S(1)
    - S(2)
  - - S(3)
    - S(4)
  - - S(5)
    - S(6)
