umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_sulfur_s_3.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: D4d
order: 16
equivalence_sets:
  - - S(0)
    - S(1)
    - S(2)
    - S(3)
    - S(4)
    - S(5)
    - S(6)
    - S(7)
