umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_sulfurhexafluoride.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: Oh
order: 48
equivalence_sets:
  - - S(0)
  - - F(1)
    - F(2)
    - F(3)
    - F(4)
    - F(5)
    - F(6)
