umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_tartaric_acid_meso.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: Ci
order: 2
equivalence_sets:
  - - C(0)
    - C(1)
  - - C(2)
    - C(3)
  - - O(4)
    - O(5)
  - - H(6)
    - H(7)
  - - O(8)
    - O(9)
  - - H(10)
    - H(11)
  - - O(12)
    - O(13)
  - - H(14)
    - H(15)
