umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_tetrachloroneopentane.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: S4
order: 4
equivalence_sets:
  - - C(0)
  - - C(1)
    - C(2)
    - C(3)
    - C(4)
  - - H(5)
    - Cl(6)
    - H(7)
    - H(8)
  - - Cl(9)
    - H(10)
    - Cl(11)
    - H(12)
  - - H(13)
    - H(14)
    - Cl(15)
    - H(16)
